[workspace]
    members = [
        "ch_0_TensorOps", 
        "ch_1_ANN"
    ] 

[package]
name = "candle-tutorials"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git= "https://github.com/huggingface/candle.git" }